--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     <!-- HEADER -->
     <header>
         <!-- HEADER TOP -->
-        <section class="header_top">
-            <div class="col-1 offset-11 p-2">
+        <section class="header_top p-2">
+            <div class="col-2 offset-10 col-md-1 offset-md-11">
                 <img src="./img/sony_logo.svg" alt="Sony header logo">
             </div>
         </section>
+
         <!-- NAVBAR HEADEER -->
         <nav class="navbar navbar-light navbar-expand-xxl site-navbar fw-bolder px-2">
                 <!-- NAV BRAND AREA -->
@@ -64,6 +65,7 @@
                     </li>
                 </ul>
             </div>
+            
                 <!-- RIGHT COLLAPSE MENU -->
             <button class="navbar-toggler" 
                 type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,7 +80,7 @@
                         </a>
                     </li>
                     <li class="nav-item pe-1">
-                        <a href="#" class="btn btn-secondary rounded-pill" role="button">Accedi</a>
+                        <a href="#" class="btn btn-dark shadow-none rounded-pill" role="button">Accedi</a>
                     </li>
                     <li class="nav-item pe-1">
                         <a href="#" class="nav-link color-link">
@@ -89,5 +91,31 @@
             </div>
         </nav>
     </header>
+
+    <!-- HERO -->
+    <div class="hero text-white">
+        <div class="container hero_content mx-sm-3 ms-xxl-5 ps-xxl-5">
+            <div class="col-12 col-xxl-4 ms-xxl-5 ps-xxl-5">
+                <div class="row">
+                    <div class="col-7 col-sm-6 col-md-4 col-xxl-7 pb-4">
+                        <img src="./img/returnal-hero-banner-logo.png" alt="Returnal banner">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6 col-xxl-12">
+                        <h3>Rompi il cerchio</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 py-3">
+                        Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.
+                    </div>
+                    <div class="col-4 col-xxl-5 pb-5">
+                        <button type="button" class="btn btn-danger shadow-none  rounded-pill">Acquista ora</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
