--- a/index.html
+++ b/index.html
@@ -117,5 +117,32 @@
             </div>
         </div>
     </div>
+
+    <!-- MAIN -->
+    <main>
+        <!-- GAME LIST SECTIONS -->
+        <div class="container game_list mt-4 mb-5">
+            <div class="row g-2">
+                <div class="col-6 col-sm-4 col-xxl-2">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal image">
+                </div>
+                <div class="col-6 col-sm-4 col-xxl-2">
+                    <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank image">
+                </div>
+                <div class="col-6 col-sm-4 col-xxl-2">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal image">
+                </div>
+                <div class="col-6 col-sm-4 col-xxl-2">
+                    <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank image">
+                </div>
+                <div class="col-6 col-sm-4 col-xxl-2">
+                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal image">
+                </div>
+                <div class="col-6 col-sm-4 col-xxl-2">
+                    <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank image">
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
