Ps5 presentation section add

--- a/index.html
+++ b/index.html
@@ -120,29 +120,39 @@
 
     <!-- MAIN -->
     <main>
+
         <!-- GAME LIST SECTIONS -->
-        <div class="container game_list mt-4 mb-5">
-            <div class="row g-2">
-                <div class="col-6 col-sm-4 col-xxl-2">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal image">
-                </div>
-                <div class="col-6 col-sm-4 col-xxl-2">
-                    <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank image">
-                </div>
-                <div class="col-6 col-sm-4 col-xxl-2">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal image">
-                </div>
-                <div class="col-6 col-sm-4 col-xxl-2">
-                    <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank image">
-                </div>
-                <div class="col-6 col-sm-4 col-xxl-2">
-                    <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal image">
-                </div>
-                <div class="col-6 col-sm-4 col-xxl-2">
-                    <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank image">
+        <section class="game_list mt-4 mb-5">
+            <div class="container">
+                <div class="row g-2">
+                    <div class="col-6 col-sm-4 col-xxl-2">
+                        <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal image">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2">
+                        <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank image">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2">
+                        <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal image">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2">
+                        <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank image">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2">
+                        <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal image">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2">
+                        <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank image">
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
+
+        <!-- PS5 PRESENTATION -->
+        <section class="text-center fw-bolder py-5">
+            <span class="text-uppercase text-primary">Play has no limits</span>
+            <h3>Ecco la PlayStation 5</h3>
+            <span>Tuffati in nuove possibilità di gioco completamente inaspettate</span>
+        </section>
     </main>
 </body>
 </html>
