PS5 console section add

--- a/index.html
+++ b/index.html
@@ -153,6 +153,44 @@
             <h3>Ecco la PlayStation 5</h3>
             <span>Tuffati in nuove possibilità di gioco completamente inaspettate</span>
         </section>
+
+        <!-- PS5 CONSOLE -->
+        <section class="console_section py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-5 align-self-center">
+                        <h3 class="fs-1">Console PlayStation 5</h3>
+                        <p>Sperimenta la nuova generazione di incredibili giochi PlayStation</p>
+                        <button type="button" class="btn btn-sm btn-primary shadow-none  rounded-pill mt-2">Maggiori informazioni</button>
+                    </div>
+                    <div class="col-12 col-md-7">
+                        <img src="./img/playstation-5-thumb.png" alt="Playstation 5 image">
+                    </div>
+                </div>
+                <div class="row justify-content-md-between text-secondary">
+                    <div class="col-4 col-md-2 text-center carosel_img">
+                        <img src="./img/playstation-5-thumb.png" alt="Playstation 5 image">
+                        <span class="d-none d-md-block">Console PS5</span>
+                    </div>
+                    <div class="col-4 col-md-2 text-center carosel_img">
+                        <img src="./img/joypad-thumb.png" alt="Joypad image">
+                        <span class="d-none d-md-block">Controller wireless DualSense&trade;</span>
+                    </div>
+                    <div class="col-4 col-md-2 text-center carosel_img">
+                        <img src="./img/headset-thumb.png" alt="Headset image">
+                        <span class="d-none d-md-block">Cuffie wireless con microfono PULSE 3&trade;</span>
+                    </div>
+                    <div class="col-4 col-md-2 text-center carosel_img">
+                        <img src="./img/remote-thumb.png" alt="Remote controller image">
+                        <span class="d-none d-md-block">Telecomando Media</span>
+                    </div>
+                    <div class="col-4 col-md-2 text-center carosel_img">
+                        <img src="./img/camera-thumb.jpg" alt="Camera image">
+                        <span class="d-none d-md-block">Telecamera HD</span>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
