--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </section>
 
         <!-- NAVBAR HEADEER -->
-        <nav class="navbar navbar-light navbar-expand-xxl site-navbar fw-bolder px-2">
+        <nav class="navbar navbar-light navbar-expand-xl site-navbar fw-bolder px-2">
                 <!-- NAV BRAND AREA -->
             <button class="bg-white border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="navigation">
                 <span>
@@ -94,24 +94,26 @@
 
     <!-- HERO -->
     <div class="hero text-white">
-        <div class="container hero_content mx-sm-3 ms-xxl-5 ps-xxl-5">
-            <div class="col-12 col-xxl-4 ms-xxl-5 ps-xxl-5">
-                <div class="row">
-                    <div class="col-7 col-sm-6 col-md-4 col-xxl-7 pb-4">
-                        <img src="./img/returnal-hero-banner-logo.png" alt="Returnal banner">
+        <div class="cover">
+            <div class="container hero_content mx-sm-3 ms-xl-5 ps-xl-5">
+                <div class="col-12 col-xl-4 ms-xl-5 ps-xl-5">
+                    <div class="row">
+                        <div class="col-7 col-sm-6 col-md-4 col-xl-7 pb-4">
+                            <img src="./img/returnal-hero-banner-logo.png" alt="Returnal banner">
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-6 col-xxl-12">
-                        <h3>Rompi il cerchio</h3>
+                    <div class="row">
+                        <div class="col-6 col-xl-12">
+                            <h3>Rompi il cerchio</h3>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 py-3">
-                        Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.
-                    </div>
-                    <div class="col-4 col-xxl-5 pb-5">
-                        <button type="button" class="btn btn-danger shadow-none  rounded-pill">Acquista ora</button>
+                    <div class="row">
+                        <div class="col-12 py-3">
+                            Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.
+                        </div>
+                        <div class="col-4 col-xl-5 pb-5">
+                            <button type="button" class="btn btn-danger shadow-none  rounded-pill">Acquista ora</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -125,22 +127,22 @@
         <section class="game_list mt-4 mb-5">
             <div class="container">
                 <div class="row g-2">
-                    <div class="col-6 col-sm-4 col-xxl-2">
+                    <div class="col-6 col-sm-4 col-xl-2">
                         <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal image">
                     </div>
-                    <div class="col-6 col-sm-4 col-xxl-2">
+                    <div class="col-6 col-sm-4 col-xl-2">
                         <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank image">
                     </div>
-                    <div class="col-6 col-sm-4 col-xxl-2">
+                    <div class="col-6 col-sm-4 col-xl-2">
                         <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal image">
                     </div>
-                    <div class="col-6 col-sm-4 col-xxl-2">
+                    <div class="col-6 col-sm-4 col-xl-2">
                         <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank image">
                     </div>
-                    <div class="col-6 col-sm-4 col-xxl-2">
+                    <div class="col-6 col-sm-4 col-xl-2">
                         <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal image">
                     </div>
-                    <div class="col-6 col-sm-4 col-xxl-2">
+                    <div class="col-6 col-sm-4 col-xl-2">
                         <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="Ratchet and Clank image">
                     </div>
                 </div>
@@ -187,6 +189,34 @@
                     <div class="col-4 col-md-2 text-center carosel_img">
                         <img src="./img/camera-thumb.jpg" alt="Camera image">
                         <span class="d-none d-md-block">Telecamera HD</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- IT TAKES TWO SECTION -->
+        <section class="game_section text-white">
+            <div class="cover">
+                <div class="container game_section_content mx-sm-3 ms-xl-5 ps-xl-5">
+                    <div class="col-12 col-xl-4 ms-xl-5 ps-xl-5">
+                        <div class="row">
+                            <div class="col-7 col-sm-6 col-md-4 col-xl-7 pb-4">
+                                <img src="./img/it-takes-two-logo.png" alt="It takes two logo">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <h3>Un'avventura cooperativa selvaggia ti attende</h3>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 py-3">
+                                Trova un amico e partite per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere
+                            </div>
+                            <div class="col-4 col-xl-5 pb-5">
+                                <button type="button" class="btn btn-danger shadow-none  rounded-pill">Acquista ora</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
