New releases section add

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         <img src="./img/playstation-5-thumb.png" alt="Playstation 5 image">
                     </div>
                 </div>
-                <div class="row justify-content-md-between text-secondary">
+                <div class="row justify-content-md-between align-items-center text-secondary">
                     <div class="col-4 col-md-2 text-center carosel_img">
                         <img src="./img/playstation-5-thumb.png" alt="Playstation 5 image">
                         <span class="d-none d-md-block">Console PS5</span>
@@ -217,6 +217,64 @@
                                 <button type="button" class="btn btn-danger shadow-none  rounded-pill">Acquista ora</button>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- NEW RELEASES -->
+        <section class="new_release bg-dark text-white py-3">
+            <div class="container">
+                <h3 class="py-2">Nuove uscite</h3>
+                <span>Giochi incredibili per PS4 e PS5 disponibili ora</span>
+                <div class="row gx-2 gy-4 py-4">
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks image">
+                        <span>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot image">
+                        <span>Crash Bandicoot 4: It's About Time</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks image">
+                        <span>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot image">
+                        <span>Crash Bandicoot 4: It's About Time</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks image">
+                        <span>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot image">
+                        <span>Crash Bandicoot 4: It's About Time</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks image">
+                        <span>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot image">
+                        <span>Crash Bandicoot 4: It's About Time</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks image">
+                        <span>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot image">
+                        <span>Crash Bandicoot 4: It's About Time</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="Tony Hawks image">
+                        <span>Tony Hawk's&trade; Pro Skater&trade; 1 + 2</span>
+                    </div>
+                    <div class="col-6 col-sm-4 col-xl-2">
+                        <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Crash Bandicoot image">
+                        <span>Crash Bandicoot 4: It's About Time</span>
                     </div>
                 </div>
             </div>
