--- a/index.html
+++ b/index.html
@@ -279,6 +279,41 @@
                 </div>
             </div>
         </section>
+
+        <!-- EXPLORE PS4 -->
+        <section class="explore_ps4">
+            <div class="container">
+                <div class="text-center">
+                    <h3 class="py-4">Esplora PlayStation 4&reg;</h3>
+                    <span >Giochi incredibili e intrattenimento senza fine.</span>
+                    <br>
+                    <span >Non c'è mai stato un momento migliore per giocare sulla tua ps4.</span>
+                </div>
+                <div class="row py-4">
+                    <!-- PS4 -->
+                    <div class="col-12 col-md-4">
+                        <img src="./img/ps4-slim-homepage-image-block.jpg" alt="PlayStation 4 image">
+                        <h3>PlayStation 4</h3>
+                        <p>Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</p>
+                        <button type="button" class="btn btn-primary shadow-none rounded-pill my-3">Scopri di più</button>
+                    </div>
+                    <!-- VR -->
+                    <div class="col-12 col-md-4">
+                        <img src="./img/double11-202010-tw-psvr.jpg" alt="VR PlayStation image">
+                        <h3>PlayStation VR</h3>
+                        <p>Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</p>
+                        <button type="button" class="btn btn-primary shadow-none rounded-pill my-3">Scopri di più</button>
+                    </div>
+                    <!-- DUALSHOCK 4 -->
+                    <div class="col-12 col-md-4">
+                        <img src="./img/dualshock-4-listing-thumb.jpg" alt="Dualshock 4 image">
+                        <h3>Accessori</h3>
+                        <p>Migliora la tua esperienza PS4 con una gamma di accessori ufficiali</p>
+                        <button type="button" class="btn btn-primary shadow-none rounded-pill my-3">Scopri di più</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
