--- a/index.html
+++ b/index.html
@@ -314,6 +314,25 @@
                 </div>
             </div>
         </section>
+
+        <!-- PLAYSTATION PLUS -->
+        <section class="ps_plus">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-12 col-md-6">
+                        <div class="col-6 py-4">
+                            <img src="./img/ps-plus-logo.png" alt="PlayStation Pluss logo"/>
+                        </div>
+                        <p>Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
+                        <button type="button" class="btn btn-light shadow-none rounded-pill mt-3
+                        mb-5">Esplora PlayStation Plus</button>
+                    </div>
+                    <div class="d-none col-md-6 d-md-block">
+                        <img src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="PlayStation Plus mounthly game">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
