--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </header>
 
     <!-- HERO -->
-    <div class="hero text-white">
+    <div class="hero img_full_w text-white">
         <div class="cover">
             <div class="container hero_content mx-sm-3 ms-xl-5 ps-xl-5">
                 <div class="col-12 col-xl-4 ms-xl-5 ps-xl-5">
@@ -124,7 +124,7 @@
     <main>
 
         <!-- GAME LIST SECTIONS -->
-        <section class="game_list mt-4 mb-5">
+        <section class="game_list img_full_w mt-4 mb-5">
             <div class="container">
                 <div class="row g-2">
                     <div class="col-6 col-sm-4 col-xl-2">
@@ -157,7 +157,7 @@
         </section>
 
         <!-- PS5 CONSOLE -->
-        <section class="console_section py-5">
+        <section class="img_full_w py-5">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-5 align-self-center">
@@ -197,7 +197,7 @@
         <!-- IT TAKES TWO SECTION -->
         <section class="game_section text-white">
             <div class="cover">
-                <div class="container game_section_content mx-sm-3 ms-xl-5 ps-xl-5">
+                <div class="container game_section_content img_full_w mx-sm-3 ms-xl-5 ps-xl-5">
                     <div class="col-12 col-xl-4 ms-xl-5 ps-xl-5">
                         <div class="row">
                             <div class="col-7 col-sm-6 col-md-4 col-xl-7 pb-4">
@@ -281,7 +281,7 @@
         </section>
 
         <!-- EXPLORE PS4 -->
-        <section class="explore_ps4">
+        <section class="img_full_w">
             <div class="container">
                 <div class="text-center">
                     <h3 class="py-4">Esplora PlayStation 4&reg;</h3>
@@ -316,7 +316,7 @@
         </section>
 
         <!-- PLAYSTATION PLUS -->
-        <section class="ps_plus">
+        <section class="ps_plus img_full_w">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-6">
@@ -330,6 +330,23 @@
                     <div class="d-none col-md-6 d-md-block">
                         <img src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="PlayStation Plus mounthly game">
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- PS STORE NEW DISCOUNT -->
+        <section class="container img_full_w text-center py-4">
+            <h3>Nuovi sconti sul PlayStation Store</h3>
+            <p class="py-3">Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4, PS VR, tutti in un unico posto.</p>
+            <div class="row gy-4">
+                <div class="col-12 col-md-4">
+                    <img src="./img/playstation-store-games-under-20-spotlight.jpg" alt="Under 20% discount">
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="./img/playstation-store-golden-week-sale-spotlight.jpg" alt="Golden week">
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="./img/playstation-store-free-to-play-spotlight.png" alt="Free to play games">
                 </div>
             </div>
         </section>
