--- a/index.html
+++ b/index.html
@@ -350,6 +350,24 @@
                 </div>
             </div>
         </section>
+
+        <!-- PS NOW -->
+        <section class="ps_now img_full_w text-light py-2 my-4">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-12 col-md-6">
+                        <div class="col-6 py-4">
+                            <img src="./img/ps-now-logo-two-column.png" alt="PlayStation Now logo"/>
+                        </div>
+                        <p>Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS$ o PC Windows, con nuovi titoli aggiunti ogni mese.</p>
+                        <button type="button" class="btn btn-light shadow-none rounded-pill mt-3
+                        mb-5">Esplora PlayStation Plus</button>
+                    </div>
+                    <div class="d-none col-md-6 d-md-block">
+                        <img src="./img/ps-now-april-featured-image-block.png" alt="PlayStation Now games">
+                    </div>
+                </div>
+        </section>
     </main>
 </body>
 </html>
