Socialmedia secion add

--- a/index.html
+++ b/index.html
@@ -368,6 +368,27 @@
                     </div>
                 </div>
         </section>
+
+        <!-- SOCIAlMEDIA SECTION -->
+        <section class="container img_full_w text-center my-4">
+            <div class="col-12 col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-xl-6 offset-xl-3">
+                <h3 class="py-5">Seguici sui social media</h3>
+                <div class="row g-2 g-md-3">
+                    <div class="col-6 col-sm-3">
+                        <img src="./img/twitter.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-3">
+                        <img src="./img/facebook.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-3">
+                        <img src="./img/instagram.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-3">
+                        <img src="./img/youtube.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
