--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!-- HEADER -->
-    <header>
+    <header class="fixed-top">
         <!-- HEADER TOP -->
         <section class="header_top p-2">
             <div class="col-2 offset-10 col-md-1 offset-md-11">
@@ -23,7 +23,7 @@
         </section>
 
         <!-- NAVBAR HEADEER -->
-        <nav class="navbar navbar-light navbar-expand-xl site-navbar fw-bolder px-2">
+        <nav class="navbar navbar-light navbar-expand-xl site-navbar bg-white fw-bolder px-2">
                 <!-- NAV BRAND AREA -->
             <button class="bg-white border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="navigation">
                 <span>
@@ -370,7 +370,7 @@
         </section>
 
         <!-- SOCIAlMEDIA SECTION -->
-        <section class="container img_full_w text-center my-4">
+        <section class="container img_full_w text-center py-5">
             <div class="col-12 col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-xl-6 offset-xl-3">
                 <h3 class="py-5">Seguici sui social media</h3>
                 <div class="row g-2 g-md-3">
@@ -390,5 +390,61 @@
             </div>
         </section>
     </main>
+
+    <!-- FOOTER -->
+    <footer class="mt-5 py-5">
+        <div class="container img_full_w text-light">
+            <div class="row align-items-baseline">
+                <!-- LOGO SECTION -->
+                <div class="col-12 col-xl-6 py-4">
+                    <div class="col-2 py-4">
+                        <img src="./img/ps-footer.svg" alt="Playstation logo">
+                    </div>
+                    <span>
+                        <i class="fas fa-globe"></i>
+                        Country/Region: Italy
+                    </span>
+                </div>
+                <!-- LINK FOOTER SECTION -->
+                <div class="col-12 col-xl-6">
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <ul class="footer_link">
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <ul class="footer_link">
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <ul class="footer_link">
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                                <li>Link footer n</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-2 col-xl-1">
+                <img src="./img/sie-logo.svg" alt="">
+            </div>
+            <div class="col-12 col-xl-6 fw-normal py-4">
+                Web site &copy;2021 Sony Interactive Entertainment Europe Limited, nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti riservati. <a href="#" class="text-light fw-normal">Maggiori info</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
