--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         </a>
                     </li>
                     <li class="nav-item pe-1">
-                        <a href="#" class="btn btn-dark shadow-none rounded-pill" role="button">Accedi</a>
+                        <a href="#" class="btn btn-dark outline_black shadow-none rounded-pill" role="button">Accedi</a>
                     </li>
                     <li class="nav-item pe-1">
                         <a href="#" class="nav-link color-link">
@@ -214,7 +214,7 @@
                                 Trova un amico e partite per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere
                             </div>
                             <div class="col-4 col-xl-5 pb-5">
-                                <button type="button" class="btn btn-danger shadow-none  rounded-pill">Acquista ora</button>
+                                <button type="button" class="btn btn-danger outline_red shadow-none  rounded-pill">Acquista ora</button>
                             </div>
                         </div>
                     </div>
@@ -291,25 +291,31 @@
                 </div>
                 <div class="row py-4">
                     <!-- PS4 -->
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-4 flex_column_between">
                         <img src="./img/ps4-slim-homepage-image-block.jpg" alt="PlayStation 4 image">
                         <h3>PlayStation 4</h3>
                         <p>Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</p>
-                        <button type="button" class="btn btn-primary shadow-none rounded-pill my-3">Scopri di più</button>
+                        <div>
+                            <button type="button" class="btn btn-primary outline_blue shadow-none rounded-pill my-3">Scopri di più</button>
+                        </div>
                     </div>
                     <!-- VR -->
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-4 flex_column_between">
                         <img src="./img/double11-202010-tw-psvr.jpg" alt="VR PlayStation image">
                         <h3>PlayStation VR</h3>
                         <p>Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</p>
-                        <button type="button" class="btn btn-primary shadow-none rounded-pill my-3">Scopri di più</button>
+                        <div>
+                            <button type="button" class="btn btn-primary outline_blue shadow-none rounded-pill my-3">Scopri di più</button>
+                        </div>
                     </div>
                     <!-- DUALSHOCK 4 -->
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-4 flex_column_between">
                         <img src="./img/dualshock-4-listing-thumb.jpg" alt="Dualshock 4 image">
                         <h3>Accessori</h3>
                         <p>Migliora la tua esperienza PS4 con una gamma di accessori ufficiali</p>
-                        <button type="button" class="btn btn-primary shadow-none rounded-pill my-3">Scopri di più</button>
+                        <div>
+                            <button type="button" class="btn btn-primary outline_blue shadow-none rounded-pill my-3">Scopri di più</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -324,7 +330,7 @@
                             <img src="./img/ps-plus-logo.png" alt="PlayStation Pluss logo"/>
                         </div>
                         <p>Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
-                        <button type="button" class="btn btn-light shadow-none rounded-pill mt-3
+                        <button type="button" class="btn btn-light outline_white shadow-none rounded-pill mt-3
                         mb-5">Esplora PlayStation Plus</button>
                     </div>
                     <div class="d-none col-md-6 d-md-block">
@@ -360,13 +366,16 @@
                             <img src="./img/ps-now-logo-two-column.png" alt="PlayStation Now logo"/>
                         </div>
                         <p>Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS$ o PC Windows, con nuovi titoli aggiunti ogni mese.</p>
-                        <button type="button" class="btn btn-light shadow-none rounded-pill mt-3
-                        mb-5">Esplora PlayStation Plus</button>
+                        <div class="effect">
+                            <button type="button" class="btn btn-light outline_white shadow-none rounded-pill mt-3
+                            mb-5">Esplora PlayStation Plus</button>
+                        </div>
                     </div>
                     <div class="d-none col-md-6 d-md-block">
                         <img src="./img/ps-now-april-featured-image-block.png" alt="PlayStation Now games">
                     </div>
                 </div>
+            </div>
         </section>
 
         <!-- SOCIAlMEDIA SECTION -->
