--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.
                         </div>
                         <div class="col-4 col-xl-5 pb-5">
-                            <button type="button" class="btn btn-danger shadow-none  rounded-pill">Acquista ora</button>
+                            <button type="button" class="btn btn-danger outline_red shadow-none  rounded-pill">Acquista ora</button>
                         </div>
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                     <div class="col-12 col-md-5 align-self-center">
                         <h3 class="fs-1">Console PlayStation 5</h3>
                         <p>Sperimenta la nuova generazione di incredibili giochi PlayStation</p>
-                        <button type="button" class="btn btn-sm btn-primary shadow-none  rounded-pill mt-2">Maggiori informazioni</button>
+                        <button type="button" class="btn btn-sm btn-primary outline_blue shadow-none  rounded-pill mt-2">Maggiori informazioni</button>
                     </div>
                     <div class="col-12 col-md-7">
                         <img src="./img/playstation-5-thumb.png" alt="Playstation 5 image">
